# C-ASSIGNMENTS

1_guessing_game/: CMakeLists.txt
1_guessing_game/lib/: CMakeLists.txt  sum.cpp  sum.h
1_guessing_game/lib/Game/: CMakeLists.txt
1_guessing_game/lib/Player/src/: Player.cpp
1_guessing_game/src/: CMakeLists.txt
2_igg_image/: CMakeLists.txt
2_igg_image/data/: lena1.ascii.pgm
2_igg_image/igg_image/src/: CMakeLists.txt  main.cpp
2_igg_image/igg_image/src/igg_image/: CMakeLists.txt
2_igg_image/src/: main.cpp
2_igg_image/src/igg_image/: image.cpp  image.h
3-igg_image/: CMakeLists.txt
3-igg_image/data/: pbmlib1.ascii.ppm  pbmlib3.ascii.ppm
3-igg_image/src/: main.cpp
3-igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h
3-igg_image/src/igg_image/io_strategies/: CMakeLists.txt  png_strategy.cpp  ppm_strategy.cpp  ppm_strategy.h
guessing_game/: CMakeLists.txt
guessing_game/lib/: CMakeLists.txt
guessing_game/lib/Game/include/: Game.h
guessing_game/lib/Game/src/: Game.cpp
guessing_game/lib/Player/: CMakeLists.txt
guessing_game/lib/Player/include/: Player.h
guessing_game/src/: main  main.cpp
homework_4/digit_counter/: CMakeLists.txt
homework_4/digit_counter/src/: CMakeLists.txt  digit_counting.cpp  digit_counting.h  main.cpp
homework_4/igg_image/: CMakeLists.txt
homework_4/igg_image/data/: pbmlib.ascii.ppm  pbmlib2.ascii.ppm
homework_4/igg_image/src/: CMakeLists.txt  main.cpp
homework_4/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h
homework_4/stack_limit/: stack_limit  stack_limit.cpp
igg_image/: .gitignore  CMakeLists.txt
(+2 files in other folders)
